--- a/.ideavimrc
+++ b/.ideavimrc
@@ -13,7 +13,7 @@ nnoremap <Leader>i :action GotoImplementation<cr>
 nnoremap <Leader>sm :action GotoSuperMethod<cr>
 "nnoremap <Leader>t :action GotoTest<cr>
 nnoremap <Leader>o :action GotoFile<cr>
-"nnoremap <Leader>s :action FileStructurePopup<cr>
+nnoremap <Leader>k :action FileStructurePopup<cr>
 nnoremap <Leader><BS> :action VimFilePrevious<cr>
 
 " actions
