move zshrc back up, separate aliases

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,7 @@
     ~/.vimrc: vimrc
     ~/.zsh: zsh
     ~/.zshrc: zshrc
+    ~/.oh-my-zsh/custom/themes: oh-my-zsh/custom/themes/
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
