update names to be not hidden

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 - link:
     ~/.dotfiles: ''
     ~/.vimrc: vimrc
+    ~/.ideavimrc: ideavimrc
     ~/.zsh: zsh
     ~/.zshrc: zshrc
     ~/.oh-my-zsh/custom/themes: oh-my-zsh/custom/themes/
