--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,10 @@
     ~/.zshrc: zshrc
     ~/.oh-my-zsh/custom/themes: oh-my-zsh/custom/themes/
     ~/.gitconfig: gitconfig
+    ~/.gitignore: gitignore
+    ~/Library/Application Support/Code/User/settings.json: vscode/settings.json
+    ~/Library/Application Support/Code/User/keybindings.json: vscode/keybindings.json
+    ~/Library/Application Support/Code/User/snippets: vscode/snippets/
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
