--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,6 +18,7 @@
     ~/Library/Application Support/Code/User/settings.json: vscode/settings.json
     ~/Library/Application Support/Code/User/keybindings.json: vscode/keybindings.json
     ~/Library/Application Support/Code/User/snippets: vscode/snippets/
+    ~/.config/karabiner/karabiner.json: karabiner/karabiner.json
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
